Fixes dropwdown style to whitespace wrap only inside Tainacan forms autocomplete.

--- a/src/admin/scss/_tainacan-form.scss
+++ b/src/admin/scss/_tainacan-form.scss
@@ -117,4 +117,9 @@
         border-color: $gray2;
         padding: 1.25rem;
     }
+    .autocomplete {
+        .dropdown-item {
+            white-space: initial !important;
+        }
+    }
 }
